# Klondike-rust

./: Cargo.toml
src/: card.rs  main.rs  main.rs.orig
src/card_game/: american_cards.rs  card_containers.rs  mod.rs
src/card_game/klondike/: deck.rs  foundation.rs  mod.rs  pile.rs
src/card_game/klondike/storage/: cleanup_wrapper.rs  hashmap_repository.rs  klondike_hashmap_repository.rs  klondike_repository.rs  mod.rs
src/card_game/klondike/ui/: mod.rs
src/card_game/klondike/ui/console/: mod.rs
src/card_game/klondike/ui/web/: mod.rs
