[package]
name = "klondike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
rand = "0.8.4"
json = "0.12.4"
ansi_term = "0.12.1"
mockall = "0.10.2"
rocket = {version ="0.5.0-rc.1", features=["json"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
serde = "1.0.117"
serde_derive = "1.0.130"
serde_json = "1.0"
clokwerk = "0.3.5"

